add osx command to create-test-workspace task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,6 +46,9 @@
                "linux": {
                     "command": "mkdir -p src/test/fixtures/_testWorkspace"
                },
+               "osx": {
+                    "command": "mkdir -p src/test/fixtures/_testWorkspace"
+               },
                "windows": {
                     "command": "mkdir -f src/test/fixtures/_testWorkspace"
                },
