--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
           "@types/webpack-env": "^1.17.0",
           "inversify": "^6.0.1",
           "lcov-parse": "^1.0.0",
+          "matched": "^5.0.1",
           "reflect-metadata": "^0.1.13"
      }
 }
