--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
           "fs-extra": "^10.1.0",
           "glob": "^8.0.3",
           "mocha": "^9.2.2",
+          "mocha-suppress-logs": "^0.3.1",
           "ts-loader": "^9.2.8",
           "ts-node": "^10.8.0",
           "umd-compat-loader": "^2.1.2",
