--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
           "@typescript-eslint/eslint-plugin": "^5.21.0",
           "@typescript-eslint/parser": "^5.21.0",
           "@vscode/debugadapter-testsupport": "^1.58.0",
+          "@vscode/debugprotocol": "^1.58.0",
           "@vscode/test-electron": "^2.1.5",
           "chai": "^4.3.6",
           "eol": "^0.9.1",
