improve migration script process handling fixes #16

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,8 @@
             {
                 "allowTemplateLiterals": true
             }
-        ]
+        ],
+        "no-console": "warn"
     },
     "ignorePatterns": [
         "out",
