--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
                "outFiles": [
                     "${workspaceFolder}/dist/**/*.js"
                ],
-               "preLaunchTask": "${defaultBuildTask}"
+               "preLaunchTask": "${defaultBuildTask}",
+               "autoAttachChildProcesses": true
           },
           {
                "name": "Extension Tests",
@@ -36,7 +37,8 @@
                     "${workspaceFolder}/node_modules/**/*.js",
                     "<node_internals>/**",
                     "**/extensionHostProcess.js"
-               ]
+               ],
+               "autoAttachChildProcesses": true
           }
      ]
 }
