--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/await-thenable": "warn",
         "@typescript-eslint/explicit-function-return-type": "error",
         "@typescript-eslint/explicit-member-accessibility": "warn",
         "@typescript-eslint/no-floating-promises": "error",
@@ -39,9 +40,9 @@
             "multi-line"
         ],
         "eqeqeq": "warn",
+        "no-console": "warn",
         "no-throw-literal": "warn",
         "prefer-const": "warn",
-        "semi": "error",
         "quotes": [
             "warn",
             "double",
@@ -49,7 +50,8 @@
                 "allowTemplateLiterals": true
             }
         ],
-        "no-console": "warn"
+        "require-await": "warn",
+        "semi": "error"
     },
     "ignorePatterns": [
         "out",
